--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,132 +20,186 @@
   </head>
   <body>
     <header class="header">
-      <a class="logo link" href="./index.html">Web<span class="logo-primary">Studio</span></a>
-      <nav class="nav">
-        <ul class="list nav-list">
-          <li><a class="link nav-item current" href="./index.html">Студия</a></li>
-          <li><a class="link nav-item" href="./portfolio.html">Портфолио</a></li>
-          <li><a class="link nav-item" href="">Контакты</a></li>
+      <div class="container header-container">
+        <a class="logo link" href="./index.html">Web<span class="logo-primary">Studio</span></a>
+        <nav class="nav">
+          <ul class="list nav-list">
+            <li class="nav-item">
+              <a class="link nav-link current" href="./index.html">Студия</a>
+            </li>
+            <li class="nav-item"><a class="link nav-link" href="./portfolio.html">Портфолио</a></li>
+            <li class="nav-item"><a class="link nav-link" href="">Контакты</a></li>
+          </ul>
+        </nav>
+        <ul class="list adress-list">
+          <li class="adress-item">
+            <a class="link adress-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li class="adress-item">
+            <a class="link adress-link" href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
         </ul>
-      </nav>
-      <ul class="list adress-list">
-        <li><a class="link adress-item" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class="link adress-item" href="tel:+380961111111">+38 096 111 11 11</a></li>
-      </ul>
+      </div>
     </header>
+
     <main>
       <!--Секция-1 - типа герой-->
       <section class="hero">
-        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button class="hero-button" type="button">Заказать услугу</button>
+        <div class="container">
+          <h1 class="hero-title">
+            Эффективные решения<br />
+            для вашего бизнеса
+          </h1>
+          <button class="hero-button" type="button">Заказать услугу</button>
+        </div>
       </section>
 
       <!--Секция-2 - Особенности-->
-      <section class="features">
-        <h2 class="section-title visually-hidden">Особенности</h2>
-        <ul class="list">
-          <li>
-            <h3 class="features-title">Внимание к деталям</h3>
-            <p class="features-text">
-              Идейные соображения, а также начало повседневной работы по формированию позиции.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-title">Пунктуальность</h3>
-            <p class="features-text">
-              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-title">Планирование</h3>
-            <p class="features-text">
-              Равным образом консультация с широким активом в значительной степени обуславливает.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-title">Современные технологии</h3>
-            <p class="features-text">
-              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-            </p>
-          </li>
-        </ul>
+      <section class="features section">
+        <div class="container faetures-container">
+          <h2 class="section-title visually-hidden">Особенности</h2>
+          <ul class="list features-list">
+            <li class="features-item">
+              <h3 class="features-title">Внимание к деталям</h3>
+              <p class="features-text">
+                Идейные соображения, а также начало повседневной работы по формированию позиции.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-title">Пунктуальность</h3>
+              <p class="features-text">
+                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-title">Планирование</h3>
+              <p class="features-text">
+                Равным образом консультация с широким активом в значительной степени обуславливает.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-title">Современные технологии</h3>
+              <p class="features-text">
+                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- Секция-3 - Чем мы занимаемся-->
-      <section>
-        <h2 class="section-title">Чем мы занимаемся</h2>
-        <ul class="list">
-          <li>
-            <img
-              src="./images/projects/img-1.jpg"
-              alt="разработка десктоп приложений"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/projects/img-2.jpg"
-              alt="разработка мобильных приложений"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li>
-            <img src="./images/projects/img-3.jpg" alt="разработка игр" width="370" height="294" />
-          </li>
-        </ul>
+      <section class="section">
+        <div class="container">
+          <h2 class="section-title">Чем мы занимаемся</h2>
+          <ul class="list projects-list">
+            <li class="projects-item">
+              <img
+                class="projects-img"
+                src="./images/projects/img-1.jpg"
+                alt="разработка десктоп приложений"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="projects-item">
+              <img
+                class="projects-img"
+                src="./images/projects/img-2.jpg"
+                alt="разработка мобильных приложений"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="projects-item">
+              <img
+                class="projects-img"
+                src="./images/projects/img-3.jpg"
+                alt="разработка игр"
+                width="370"
+                height="294"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- Секция-3 - Наша команда-->
-      <section class="team">
-        <h2 class="section-title">Наша команда</h2>
-        <ul class="list">
-          <li>
-            <img src="./images/team/img-4.jpg" alt="Игорь Демьяненко" width="270" height="260" />
-            <h3 class="team-title">Игорь Демьяненко</h3>
-            <p class="team-text">Product Designer</p>
-          </li>
-          <li>
-            <img src="./images/team/img-5.jpg" alt="Ольга Репина" width="270" height="260" />
-            <h3 class="team-title">Ольга Репина</h3>
-            <p class="team-text">Frontend Developer</p>
-          </li>
-          <li>
-            <img src="./images/team/img-6.jpg" alt="Николай Тарасов" width="270" height="260" />
-            <h3 class="team-title">Николай Тарасов</h3>
-            <p>Marketing</p>
-          </li>
-          <li>
-            <img src="./images/team/img-7.jpg" alt="Михаил Ермаков" width="270" height="260" />
-            <h3 class="team-title">Михаил Ермаков</h3>
-            <p class="team-text">UI Designer</p>
-          </li>
-        </ul>
+      <section class="team section">
+        <div class="container">
+          <h2 class="section-title">Наша команда</h2>
+          <ul class="list team-list">
+            <li class="team-card">
+              <img
+                class="team-img"
+                src="./images/team/img-4.jpg"
+                alt="Игорь Демьяненко"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-title">Игорь Демьяненко</h3>
+              <p class="team-text">Product Designer</p>
+            </li>
+            <li class="team-card">
+              <img
+                class="team-img"
+                src="./images/team/img-5.jpg"
+                alt="Ольга Репина"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-title">Ольга Репина</h3>
+              <p class="team-text">Frontend Developer</p>
+            </li>
+            <li class="team-card">
+              <img
+                class="team-img"
+                src="./images/team/img-6.jpg"
+                alt="Николай Тарасов"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-title">Николай Тарасов</h3>
+              <p>Marketing</p>
+            </li>
+            <li class="team-card">
+              <img
+                class="team-img"
+                src="./images/team/img-7.jpg"
+                alt="Михаил Ермаков"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-title">Михаил Ермаков</h3>
+              <p class="team-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a class="logo link" href="./index.html">Web<span class="logo-secondary">Studio</span></a>
-      <address>
-        <ul class="footer-list list">
-          <li>
-            <a
-              class="footer-link link"
-              href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4265807,30.5383858,18z/data=!4m13!1m7!3m6!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!2z0LHRg9C70YzQstCw0YAg0JvQtdGB0ZYg0KPQutGA0LDRl9C90LrQuCwgMjYsINCa0LjRl9CyLCAwMjAwMA!3b1!8m2!3d50.4265807!4d30.5383858!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
-            >
-              г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li>
-            <a class="footer-link link contacts" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="footer-link link contacts" href="tel:+380961111111">+38 096 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+      <div class="container footer-container">
+        <a class="logo link" href="./index.html">Web<span class="logo-secondary">Studio</span></a>
+        <address>
+          <ul class="footer-list list">
+            <li>
+              <a
+                class="footer-link link"
+                href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4265807,30.5383858,18z/data=!4m13!1m7!3m6!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!2z0LHRg9C70YzQstCw0YAg0JvQtdGB0ZYg0KPQutGA0LDRl9C90LrQuCwgMjYsINCa0LjRl9CyLCAwMjAwMA!3b1!8m2!3d50.4265807!4d30.5383858!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
+              >
+                г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li>
+              <a class="footer-link link contacts" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="footer-link link contacts" href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
