--- a/index.html
+++ b/index.html
@@ -88,13 +88,12 @@
       </section>
 
       <!-- Секция-3 - Чем мы занимаемся-->
-      <section class="section">
+      <section class="section project-section">
         <div class="container">
           <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="list projects-list">
             <li class="projects-item">
               <img
-                class="projects-img"
                 src="./images/projects/img-1.jpg"
                 alt="разработка десктоп приложений"
                 width="370"
@@ -103,7 +102,6 @@
             </li>
             <li class="projects-item">
               <img
-                class="projects-img"
                 src="./images/projects/img-2.jpg"
                 alt="разработка мобильных приложений"
                 width="370"
@@ -112,7 +110,6 @@
             </li>
             <li class="projects-item">
               <img
-                class="projects-img"
                 src="./images/projects/img-3.jpg"
                 alt="разработка игр"
                 width="370"
@@ -136,8 +133,11 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-title">Игорь Демьяненко</h3>
-              <p class="team-text">Product Designer</p>
+              <div class="team-content">
+                <h3 class="team-title">Игорь Демьяненко</h3>
+                <p class="team-text">Product Designer</p>
+              </div>
+              >
             </li>
             <li class="team-card">
               <img
@@ -147,8 +147,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-title">Ольга Репина</h3>
-              <p class="team-text">Frontend Developer</p>
+              <div class="team-content">
+                <h3 class="team-title">Ольга Репина</h3>
+                <p class="team-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-card">
               <img
@@ -158,8 +160,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-title">Николай Тарасов</h3>
-              <p>Marketing</p>
+              <div class="team-content">
+                <h3 class="team-title">Николай Тарасов</h3>
+                <p>Marketing</p>
+              </div>
             </li>
             <li class="team-card">
               <img
@@ -169,19 +173,21 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-title">Михаил Ермаков</h3>
-              <p class="team-text">UI Designer</p>
+              <div class="team-content">
+                <h3 class="team-title">Михаил Ермаков</h3>
+                <p class="team-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
       </section>
     </main>
     <footer class="footer">
-      <div class="container footer-container">
+      <div class="container">
         <a class="logo link" href="./index.html">Web<span class="logo-secondary">Studio</span></a>
-        <address>
+        <address class="foot-adress">
           <ul class="footer-list list">
-            <li>
+            <li class="footer-item">
               <a
                 class="footer-link link"
                 href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4265807,30.5383858,18z/data=!4m13!1m7!3m6!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!2z0LHRg9C70YzQstCw0YAg0JvQtdGB0ZYg0KPQutGA0LDRl9C90LrQuCwgMjYsINCa0LjRl9CyLCAwMjAwMA!3b1!8m2!3d50.4265807!4d30.5383858!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
@@ -189,12 +195,12 @@
                 г. Киев, пр-т Леси Украинки, 26</a
               >
             </li>
-            <li>
+            <li class="footer-item">
               <a class="footer-link link contacts" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
-            <li>
+            <li class="footer-item">
               <a class="footer-link link contacts" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
           </ul>
