--- a/portfolio.html
+++ b/portfolio.html
@@ -42,132 +42,145 @@
       </div>
     </header>
     <main>
-      <section class="container section">
-        <h1 class="visually-hidden">Галерея проектов</h1>
-        <ul class="list button-list">
-          <li class="button-list-item"><button class="button" type="button">Все</button></li>
-          <li class="button-list-item"><button class="button" type="button">Веб-сайты</button></li>
-          <li class="button-list-item"><button class="button" type="button">Приложения</button></li>
-          <li class="button-list-item"><button class="button" type="button">Дизайн</button></li>
-          <li class="button-list-item"><button class="button" type="button">Маркетинг</button></li>
-        </ul>
+      <section class="section">
+        <div class="container">
+          <h1 class="visually-hidden">Галерея проектов</h1>
+          <ul class="list button-list">
+            <li class="button-list-item"><button class="button" type="button">Все</button></li>
+            <li class="button-list-item">
+              <button class="button" type="button">Веб-сайты</button>
+            </li>
+            <li class="button-list-item">
+              <button class="button" type="button">Приложения</button>
+            </li>
+            <li class="button-list-item"><button class="button" type="button">Дизайн</button></li>
+            <li class="button-list-item">
+              <button class="button" type="button">Маркетинг</button>
+            </li>
+          </ul>
 
-        <ul class="list gallery">
-          <li class="gallery-item">
-            <img src="./images/gallery/img8.jpg" alt="Вебсайт технокряк" width="370" height="294" />
-            <div class="card-content">
-              <h2 class="gallery-title">Технокряк</h2>
-              <p class="gallery-text">Веб-сайт</p>
-            </div>
-          </li>
+          <ul class="list gallery">
+            <li class="gallery-item">
+              <img
+                src="./images/gallery/img8.jpg"
+                alt="Вебсайт технокряк"
+                width="370"
+                height="294"
+              />
+              <div class="card-content">
+                <h2 class="gallery-title">Технокряк</h2>
+                <p class="gallery-text">Веб-сайт</p>
+              </div>
+            </li>
 
-          <li class="gallery-item">
-            <img src="./images/gallery/img9.jpg" alt="дизайн постера" width="370" height="294" />
-            <div class="card-content">
-              <h2 class="gallery-title">Постер New Orlean vs Golden Star</h2>
-              <p class="gallery-text">Дизайн</p>
-            </div>
-          </li>
+            <li class="gallery-item">
+              <img src="./images/gallery/img9.jpg" alt="дизайн постера" width="370" height="294" />
+              <div class="card-content">
+                <h2 class="gallery-title">Постер New Orlean vs Golden Star</h2>
+                <p class="gallery-text">Дизайн</p>
+              </div>
+            </li>
 
-          <li class="gallery-item">
-            <img
-              src="./images/gallery/img10.jpg"
-              alt="приложения для ресторана морской еды"
-              width="370"
-              height="294"
-            />
-            <div class="card-content">
-              <h2 class="gallery-title">Ресторан Seafood</h2>
-              <p class="gallery-text">Приложение</p>
-            </div>
-          </li>
+            <li class="gallery-item">
+              <img
+                src="./images/gallery/img10.jpg"
+                alt="приложения для ресторана морской еды"
+                width="370"
+                height="294"
+              />
+              <div class="card-content">
+                <h2 class="gallery-title">Ресторан Seafood</h2>
+                <p class="gallery-text">Приложение</p>
+              </div>
+            </li>
 
-          <li class="gallery-item">
-            <img
-              src="./images/gallery/img11.jpg"
-              alt="маркетинг проэкт Прайм"
-              width="370"
-              height="294"
-            />
-            <div class="card-content">
-              <h2 class="gallery-title">Проект Prime</h2>
-              <p class="gallery-text">Маркетинг</p>
-            </div>
-          </li>
+            <li class="gallery-item">
+              <img
+                src="./images/gallery/img11.jpg"
+                alt="маркетинг проэкт Прайм"
+                width="370"
+                height="294"
+              />
+              <div class="card-content">
+                <h2 class="gallery-title">Проект Prime</h2>
+                <p class="gallery-text">Маркетинг</p>
+              </div>
+            </li>
 
-          <li class="gallery-item">
-            <img
-              src="./images/gallery/img12.jpg"
-              alt="Приложение проект Коробки"
-              width="370"
-              height="294"
-            />
-            <div class="card-content">
-              <h2 class="gallery-title">Проект Boxes</h2>
-              <p class="gallery-text">Приложение</p>
-            </div>
-          </li>
+            <li class="gallery-item">
+              <img
+                src="./images/gallery/img12.jpg"
+                alt="Приложение проект Коробки"
+                width="370"
+                height="294"
+              />
+              <div class="card-content">
+                <h2 class="gallery-title">Проект Boxes</h2>
+                <p class="gallery-text">Приложение</p>
+              </div>
+            </li>
 
-          <li class="gallery-item">
-            <img
-              src="./images/gallery/img13.jpg"
-              alt="Веб-сайт Вдохновение без границ"
-              width="370"
-              height="294"
-            />
-            <div class="card-content">
-              <h2 class="gallery-title">Inspiration has no Borders</h2>
-              <p class="gallery-text">Веб-сайт</p>
-            </div>
-          </li>
+            <li class="gallery-item">
+              <img
+                src="./images/gallery/img13.jpg"
+                alt="Веб-сайт Вдохновение без границ"
+                width="370"
+                height="294"
+              />
+              <div class="card-content">
+                <h2 class="gallery-title">Inspiration has no Borders</h2>
+                <p class="gallery-text">Веб-сайт</p>
+              </div>
+            </li>
 
-          <li class="gallery-item">
-            <img
-              src="./images/gallery/img14.jpg"
-              alt="Дизайн книги издание Limited Edition"
-              width="370"
-              height="294"
-            />
-            <div class="card-content">
-              <h2 class="gallery-title">Издание Limited Edition</h2>
-              <p class="gallery-text">Дизайн</p>
-            </div>
-          </li>
+            <li class="gallery-item">
+              <img
+                src="./images/gallery/img14.jpg"
+                alt="Дизайн книги издание Limited Edition"
+                width="370"
+                height="294"
+              />
+              <div class="card-content">
+                <h2 class="gallery-title">Издание Limited Edition</h2>
+                <p class="gallery-text">Дизайн</p>
+              </div>
+            </li>
 
-          <li class="gallery-item">
-            <img
-              src="./images/gallery/img15.jpg"
-              alt="Маркетинг проект LAB"
-              width="370"
-              height="294"
-            />
-            <div class="card-content">
-              <h2 class="gallery-title">Проект LAB</h2>
-              <p class="gallery-text">Маркетинг</p>
-            </div>
-          </li>
+            <li class="gallery-item">
+              <img
+                src="./images/gallery/img15.jpg"
+                alt="Маркетинг проект LAB"
+                width="370"
+                height="294"
+              />
+              <div class="card-content">
+                <h2 class="gallery-title">Проект LAB</h2>
+                <p class="gallery-text">Маркетинг</p>
+              </div>
+            </li>
 
-          <li class="gallery-item">
-            <img
-              src="./images/gallery/img16.jpg"
-              alt="приложение Growing Business"
-              width="370"
-              height="294"
-            />
-            <div class="card-content">
-              <h2 class="gallery-title">Growing Business</h2>
-              <p class="gallery-text">Приложение</p>
-            </div>
-          </li>
-        </ul>
+            <li class="gallery-item">
+              <img
+                src="./images/gallery/img16.jpg"
+                alt="приложение Growing Business"
+                width="370"
+                height="294"
+              />
+              <div class="card-content">
+                <h2 class="gallery-title">Growing Business</h2>
+                <p class="gallery-text">Приложение</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <div class="container footer-container">
+      <div class="container">
         <a class="logo link" href="./index.html">Web<span class="logo-secondary">Studio</span></a>
-        <address>
+        <address class="foot-adress">
           <ul class="footer-list list">
-            <li>
+            <li class="footer-item">
               <a
                 class="footer-link link"
                 href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4265807,30.5383858,18z/data=!4m13!1m7!3m6!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!2z0LHRg9C70YzQstCw0YAg0JvQtdGB0ZYg0KPQutGA0LDRl9C90LrQuCwgMjYsINCa0LjRl9CyLCAwMjAwMA!3b1!8m2!3d50.4265807!4d30.5383858!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
@@ -175,12 +188,12 @@
                 г. Киев, пр-т Леси Украинки, 26</a
               >
             </li>
-            <li>
+            <li class="footer-item">
               <a class="footer-link link contacts" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
-            <li>
+            <li class="footer-item">
               <a class="footer-link link contacts" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
           </ul>
